--- a/templates/family.html
+++ b/templates/family.html
@@ -58,6 +58,9 @@
 
     </head>
 <body>
+
+    <div class="parallax"></div>
+
     <fontdue-store-modal></fontdue-store-modal>
     <header id="header">
       <div class='logo'>
@@ -86,15 +89,12 @@
 <!-- Hero Image -->
 <section class="hero-image">
     <img src="https://cms.typenetwork.com/media/original_images/UpgradeReleaseLede02_5TdLdy6.svg" alt="Image 1" class="hero-image-img">
-<!-- 
     <div class="hero-overlay">
-        <h1 class="heading">Welkom op onze website!</h1>
-        <p class="text">Ontdek de mooiste visualisaties en content hier.</p>
-        <a href="#" class="cta-btn">Leer Meer</a>
+        <h1>Upgrade family</h1>
     </div>
--->    
 </section>
 
+<!-- 
 <nav class="navbar">
     <ul>
         <li><a href="#info">Styles & axes</a></li>
@@ -103,166 +103,185 @@
         <li><a href="#stats">Statistieken</a></li>
     </ul>
 </nav>
-
-<!-- Two Columns (70%, 30%) -->
-    <div class="headerBox">
-        <h2 id="axes" class="section-header">Styles & axes</h2>
-        <h3 id="Features" class="sub-header">Supporting a variety of related styles</h3>
-    </div>
-    <section class="two-columns-70">
-    <div class="column big">
-        <h2 class="heading">Gerrit Noordzij’s cube</h2>
-        <p class="text">Gerrit Noordzij’s cube is based on a merger of expansion contrast (sharp-nib pencil) and translation contrast (broad-nib pencil). The type of contrast used in Upgrade is based on translation, with little difference between vertical thick and horizontal thin strokes. The animation (based on software by Just van Rossum’s Daily Drawbot) shows where the contrast principle of Upgrade is located in Noordzij’s cube. Upgrade styles shown in this example are Light, Book, Regular, Semibold, and Black.</p>
-    </div>
-    <div class="column small">
-        <img src="https://upgrade.typenetwork.com/images/NoordzijCube-test-x-1000MMTranspUpgrade.gif" alt="Image 1">
-    </div>
-</section>
+-->
 
 <!-- Container Grid (vierkant masker) -->
-<section id="grid" class="container-grid square">
-    <div class="grid-item">
-        <div class="image-overlay">
-            <img src="./images/2022/Presti_in_use_02.jpg" alt="Image 1">
-        </div>
-    </div>
-    <div class="grid-item">
-        <div class="image-overlay">
-            <img src="./images/2022/Presti_in_use_pure_care_02.jpg" alt="Image 1">
-        </div>
-    </div>
-    <div class="grid-item">
-        <div class="image-overlay">
-            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg" alt="Image 1">
-        </div>
-    </div>
-</section>
-<section class="container-grid square">
-    <div class="grid-item">
-        <div class="image-overlay">
-            <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg" alt="Image 1">
-        </div>
-    </div>
-    <div class="grid-item">
-        <div class="image-overlay">
-            <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg" alt="Image 1">
-        </div>
-    </div>
-    <div class="grid-item">
-        <div class="image-overlay">
-            <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg" alt="Image 1">
-        </div>
-    </div>
-</section>
-
-<section class="two-columns-70">
-    <div class="column small">
-        <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 1">
-    </div>
-    <div class="column big">
-        <h2 class="heading">Different drawings for different weights</h2>
-        <p class="text">Depending on the available space of stems and counters in the various weights, some characters have different drawings. There is no room for the vertical bar in the dollar and cent symbols to strike completely through. Note that although all weights are shown here (ranging from Hairline to UltraBlack), details in the extreme weights may not make them ideal candidates for use in this size.</p>
-    </div>
-</section>
+<div class="block">  
+  <section id="grid" class="container-grid square">
+      <div class="grid-item">
+          <div class="image-overlay">
+              <img src="./images/2022/Presti_in_use_02.jpg" alt="Image 1">
+          </div>
+      </div>
+      <div class="grid-item">
+          <div class="image-overlay">
+              <img src="./images/2022/Presti_in_use_pure_care_02.jpg" alt="Image 1">
+          </div>
+      </div>
+      <div class="grid-item">
+          <div class="image-overlay">
+              <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg" alt="Image 1">
+          </div>
+      </div>
+  </section>
+  <section class="container-grid square">
+      <div class="grid-item">
+          <div class="image-overlay">
+              <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg" alt="Image 1">
+          </div>
+      </div>
+      <div class="grid-item">
+          <div class="image-overlay">
+              <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg" alt="Image 1">
+          </div>
+      </div>
+      <div class="grid-item">
+          <div class="image-overlay">
+              <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg" alt="Image 1">
+          </div>
+      </div>
+  </section>
+</div>
 
 <!-- Cijferblok (horizontale lijst) -->
-<section class="number-block">
-    <div class="number-item">
-        <h3 class="number-header">Aantal Verkopen</h3>
-        <div class="number">1,000</div>
-        <div class="description">Verkopen</div>
+
+<div class="block">  
+  <section class="number-block">
+      <div class="number-item">
+          <h3 class="number-header">Aantal Verkopen</h3>
+          <div class="number">1,000</div>
+          <div class="description">Verkopen</div>
+      </div>
+      <div class="number-item">
+          <h3 class="number-header">Aantal Gebruikers</h3>
+          <div class="number">500</div>
+          <div class="description">Gebruikers</div>
+      </div>
+      <div class="number-item">
+          <h3 class="number-header">Aantal Producten</h3>
+          <div class="number">300</div>
+          <div class="description">Producten</div>
+      </div>
+      <div class="number-item">
+          <h3 class="number-header">Aantal Projecten</h3>
+          <div class="number">50</div>
+          <div class="description">Projecten</div>
+      </div>
+  </section>
+</div>
+
+
+<!-- Two Columns (70%, 30%) -->
+  <div class="block">  
+    <div class="headerBox">
+        <h2 id="axes">Styles & axes</h2>
+        <h3 id="Features">Supporting a variety of related styles</h3>
     </div>
-    <div class="number-item">
-        <h3 class="number-header">Aantal Gebruikers</h3>
-        <div class="number">500</div>
-        <div class="description">Gebruikers</div>
-    </div>
-    <div class="number-item">
-        <h3 class="number-header">Aantal Producten</h3>
-        <div class="number">300</div>
-        <div class="description">Producten</div>
-    </div>
-    <div class="number-item">
-        <h3 class="number-header">Aantal Projecten</h3>
-        <div class="number">50</div>
-        <div class="description">Projecten</div>
-    </div>
+    <section class="two-columns-70">
+      <div class="column big">
+          <h4>Gerrit Noordzij’s cube</h4>
+          <p>Gerrit Noordzij’s cube is based on a merger of expansion contrast (sharp-nib pencil) and translation contrast (broad-nib pencil). The type of contrast used in Upgrade is based on translation, with little difference between vertical thick and horizontal thin strokes. The animation (based on software by Just van Rossum’s Daily Drawbot) shows where the contrast principle of Upgrade is located in Noordzij’s cube. Upgrade styles shown in this example are Light, Book, Regular, Semibold, and Black.</p>
+      </div>
+      <div class="column small">
+          <img src="https://upgrade.typenetwork.com/images/NoordzijCube-test-x-1000MMTranspUpgrade.gif" alt="Image 1">
+      </div>
+  </section>
+  <section class="two-columns-70">
+      <div class="column small">
+          <img src="https://upgrade.typenetwork.com/images/glyphsbyweights.png" alt="Image 1">
+      </div>
+      <div class="column big">
+          <h4>Different drawings for different weights</h4>
+          <p>Depending on the available space of stems and counters in the various weights, some characters have different drawings. There is no room for the vertical bar in the dollar and cent symbols to strike completely through. Note that although all weights are shown here (ranging from Hairline to UltraBlack), details in the extreme weights may not make them ideal candidates for use in this size.</p>
+      </div>
+  </section>
+</div>
+<!-- Three Columns (30%, 30%, 30%) -->
+
+<div class="block">  
+  <div class="headerBox">
+    <h2 id="Features" >Upgrade features</h2>
+    <h3 id="Features" >The Upgrade family implements an extended OpenType feature set</h3>
+  </div>
+  <section class="three-columns">
+      <div class="column">
+          <h4>CSS ligatures [liga]</h4>
+          <h5 class="def">file, fjord, flow, loft</h5>
+          <h5 class="liga">file, fjord, flow, loft</h5>
+      </div>
+      <div class="column">
+          <h4>CSS fractions [frac]</h4>
+          <h5 class="def">1/2 1/3 1/4 1/5 234/567</h5>
+          <h5 class="frac">1/2 1/3 1/4 1/5 234/567</h5>
+      </div>
+      <div class="column">
+          <h4>CSS tabular figures [tnum]</h4>
+          <h5 class="def">0123456789</h5>
+          <h5 class="tnum">0123456789</h5>
+      </div>
+  </section>
+  <section class="three-columns">
+      <div class="column">
+          <h4>CSS oldstyle figures [onum]</h4>
+          <h5 class="def">0123456789</h5>
+          <h5 class="onum">0123456789</h5>
+      </div>
+      <div class="column">
+          <h4>CSS superior figures [sups]</h4>
+          <h5 class="def">0123456789</h5>
+          <h5 class="sups">0123456789</h5>
+      </div>
+      <div class="column">
+          <h4>CSS inferior figures [sinf]</h4>
+          <h5 class="def">0123456789</h5>
+          <h5 class="sinf">0123456789</h5>
+      </div>
+  </section>
+  <section class="three-columns">
+      <div class="column">
+          <h4>CSS superior lowercase [sups]</h4>
+          <h5 class="def">AaBbCcDdEeFfGgHhIiJj</h5>
+          <h5 class="sups">AaBbCcDdEeFfGgHhIiJj</h5>
+      </div>
+      <div class="column">
+          <h4>CSS inferior lowercase [sinf]</h4>
+          <h5 class="def">AaBbCcDdEeFfGgHhIiJj</h5>
+          <h5 class="sinf">AaBbCcDdEeFfGgHhIiJ.</h5>
+      </div>
+      <div class="column">
+          <h4>CSS caps to small caps [c2sc]</h4>
+          <h5 class="def">Design is detail management</h5>
+          <h5 class="c2sc">Design is detail management</h5>
+      </div>
+  </section>
+  <section class="three-columns">
+      <div class="column">
+          <h4>CSS lowercase to small caps [smcp]</h4>
+          <h5 class="def">Design is detail management</h5>
+          <h5 class="smcp">Design is detail management</h5>
+      </div>
+      <div class="column">
+          <h4>CSS caps to small caps [c2sc] + [smcp]</h4>
+          <h5 class="def">Design is detail management</h5>
+          <h5 class="c2sc smcp">Design is detail management</h5>
+      </div>
+      <div class="column">
+          <h4>CSS slashed zero [zero]</h4>
+          <h5 class="def">€ 12.000.000</h5>
+          <h5 class="zero">€ 12.000.000</h5>
+      </div>
+  </section>
+</div>
+
+<section class="hero-image">
+    <img src="https://cms.typenetwork.com/media/original_images/UpgradeExtremes02.svg" alt="Image 1" class="hero-image-img">
 </section>
 
-<!-- Three Columns (30%, 30%, 30%) -->
-<div class="headerBox">
-  <h2 id="Features" class="section-header">Upgrade features</h2>
-  <h3 id="Features" class="sub-header">The Upgrade family implements an extended OpenType feature set</h3>
-</div>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS ligatures [liga]</h2>
-        <h3 class="def">file, fjord, flow, loft</h3>
-        <h3 class="liga">file, fjord, flow, loft</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS fractions [frac]</h2>
-        <h3 class="def">1/2 1/3 1/4 1/5 234/567</h3>
-        <h3 class="frac">1/2 1/3 1/4 1/5 234/567</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS tabular figures [tnum]</h2>
-        <h3 class="def">0123456789</h3>
-        <h3 class="tnum">0123456789</h3>
-    </div>
-</section>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS oldstyle figures [onum]</h2>
-        <h3 class="def">0123456789</h3>
-        <h3 class="onum">0123456789</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS superior figures [sups]</h2>
-        <h3 class="def">0123456789</h3>
-        <h3 class="sups">0123456789</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS inferior figures [sinf]</h2>
-        <h3 class="def">0123456789</h3>
-        <h3 class="sinf">0123456789</h3>
-    </div>
-</section>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS superior lowercase [sups]</h2>
-        <h3 class="def">AaBbCcDdEeFfGgHhIiJj</h3>
-        <h3 class="sups">AaBbCcDdEeFfGgHhIiJj</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS inferior lowercase [sinf]</h2>
-        <h3 class="def">AaBbCcDdEeFfGgHhIiJj</h3>
-        <h3 class="sinf">AaBbCcDdEeFfGgHhIiJ.</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS caps to small caps [c2sc]</h2>
-        <h3 class="def">Design is detail management</h3>
-        <h3 class="c2sc">Design is detail management</h3>
-    </div>
-</section>
-<section class="three-columns">
-    <div class="column">
-        <h2 class="heading">CSS lowercase to small caps [smcp]</h2>
-        <h3 class="def">Design is detail management</h3>
-        <h3 class="smcp">Design is detail management</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS caps to small caps [c2sc] + [smcp]</h2>
-        <h3 class="def">Design is detail management</h3>
-        <h3 class="c2sc smcp">Design is detail management</h3>
-    </div>
-    <div class="column">
-        <h2 class="heading">CSS slashed zero [zero]</h2>
-        <h3 class="def">€ 12.000.000</h3>
-        <h3 class="zero">€ 12.000.000</h3>
-    </div>
-</section>
+
+    {{page.getFooter()}}
+
 </body>
+
 
 <script>
   // Function to toggle the menu
