--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -6,18 +6,14 @@ body {
     margin: 0;
     padding: 0;
     scroll-behavior: smooth;
+    background-color: yellow;
 }
 
 * {
-    margin: 0;
-    padding: 0;
     box-sizing: border-box;
 }
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
     font-size: 100%;
     vertical-align: baseline;
     letter-spacing: 1pt;
@@ -342,43 +338,130 @@ div.header h1 {
   border-radius: 10px;
 }
 
- h2 {
-  font-family: "Presti Deck Regular";
-  /*font-family: "Responder P Semibold";*/
-  font-feature-settings: "kern" 1, "clig" 1;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 6rem; /* Grotere lettergrootte */
-  color: black; /* Donkere tekstkleur */
-  margin: 10px;
-  padding:5px;
-  display:inline-block;
+h1, h2, h3, h4, h5, h6 {
+  font-weight: normal; /* Verwijder eventueel standaard vetgedrukte stijl */
+  color: #222; /* Algemene kleur voor koppen */
+  margin-top: 0;   /* Verwijder de marge boven de kop */
+  margin-bottom: 10px; /* Pas de marge onder de koppen aan naar wens */
 }
 
-h2:hover{
-  color:red;
+/* Specifieke stijlen voor h1 */
+h1 {
+  font-size: 4rem; /* 40px bij standaard lettergrootte */
+  text-transform: uppercase; /* Hoofdletters voor een sterkere uitstraling */
+  font-family:"Upgrade Bold", Fallback;
+  text-align: center; /* Centreer de hoofdheader */
+  color:white;
 }
+
+/* Specifieke stijlen voor h2 */
+h2 {
+  font-size: 3rem; /* 32px */
+  line-height: 1em;
+  font-family:"Upgrade Bold", Fallback;
+  color: black;
+  text-align: left;
+  float: left;
+  margin:0px;
+  margin-top: 10px; /* Zorgt ervoor dat de secties niet onder de navbar verdwijnen */
+  display: block;
+  width:100vw;
+  letter-spacing: 1px;
+  padding-left:20px;
+  padding-top:10px;
+}
+
+/* Specifieke stijlen voor h3 */
 h3 {
-  font-family: "Presti Deck Bold";
-  /*font-family: "Responder P Book";*/
-  font-feature-settings: "kern" 1, "clig" 1;
-  font-style: normal;
-  font-weight: 400;
-  font-size: 3.3rem; /* Grotere lettergrootte */
-  font-weight: normal;
-  color: black; /* Donkere tekstkleur */
-  margin: 10px; /* Verwijder marges */
-  padding:5px;
+  font-size: 2.5rem;
+  line-height: 1em;
+  font-family:"Upgrade Light", Fallback;
+  color: black;
+  text-align: left;
+  float: left;
+  margin:0px;
+  margin-top: 10px; /* Zorgt ervoor dat de secties niet onder de navbar verdwijnen */
+  display: block;
+  width:100vw;
+  letter-spacing: 1px;
+  padding-left:20px;
+  padding-top:5px;
 }
 
-p {
-  font-size: 1.5rem; /* Standaard tekstgrootte */
+
+/* Specifieke stijlen voor h4 */
+h4 {
+  font-size: 2.2rem;
+  line-height: 1em;
+  font-family:"Upgrade Bold", Fallback;
+  color: black;
+  text-align: left;
+  float: left;
+  margin-top: 10px; /* Zorgt ervoor dat de secties niet onder de navbar verdwijnen */
+  display: block;
+  width:100%;
+  letter-spacing: 1px;
+  padding-left:20px;
+  padding-top:20px;
+  padding-bottom:5px;
+}
+
+/* Specifieke stijlen voor h5 */
+h5 {
+  font-size: 2.2rem;
+  line-height: 1em;
   font-family:"Upgrade Regular", Fallback;
-  color: black; /* Neutrale kleur */
-  line-height: 1.7; /* Betere leesbaarheid */
-  margin: 10px; /* Verwijder marges */
-  margin-left:20px;
+  color: black;
+  text-align: left;
+  margin-top: 10px; /* Zorgt ervoor dat de secties niet onder de navbar verdwijnen */
+  letter-spacing: 1px;
+  padding-left:20px;
+}
+
+/* Specifieke stijlen voor h6 */
+h6 {
+  font-size: 1rem; /* 16px */
+  font-weight: normal;
+  color: #888;
+  font-style: italic;
+  letter-spacing: 0.05em;
+  text-align: left;
+}
+
+/* Paragraaf stijlen */
+p {
+  font-family:"Upgrade Regular", Fallback;
+  font-size: 1.7rem; /* 16px, basisgrootte */
+  line-height: 3rem;
+  color: #333;
+  word-wrap: break-word; 
   display:inline-block;
+  padding:20px;
+}
+
+
+/* Styling voor een p in een apart blok (zoals een blockquote) */
+blockquote p {
+  font-size: 1.25rem;
+  color: #444;
+  margin: 1rem 0;
+  padding-left: 1.5rem;
+  border-left: 4px solid #ddd;
+}
+
+/* Responsive aanpassingen */
+@media (max-width: 768px) {
+  h1 {
+    font-size: 2rem; /* Kleinere h1 bij kleinere schermen */
+  }
+
+  h2 {
+    font-size: 1.75rem; /* Kleinere h2 bij kleinere schermen */
+  }
+
+  p {
+    font-size: 1rem; /* Zorg dat de paragraaf ook leesbaar blijft */
+  }
 }
 
 .header {
@@ -750,35 +833,8 @@ p {
 }
 
 .headerBox {
-    width: 100%; /* Volledige breedte van de browser */
+    width: 100vw; /* Volledige breedte van de browser */
     box-sizing: border-box; /* Zorgt ervoor dat de padding binnen de breedte valt */
-    height:120px;
-}
-
-.section-header {
-    font-size: 2rem;
-    text-align: left;
-    color: #333;
-    letter-spacing: 1px;
-    width:80%;
-    background-color: #f8f8f8; /* Optionele achtergrondkleur */
-    display: block;
-    float: left;
-    margin-top: 10px; /* Zorgt ervoor dat de secties niet onder de navbar verdwijnen */
-    font-family:"Upgrade Bold", Fallback;
-    float: left;
-}
-
-.sub-header {
-    font-size: 1.8rem;
-    text-align: left;
-    color: #333;
-    width:80%;
-    letter-spacing: 1px;
-    float:left;
-    background-color: #f8f8f8; /* Optionele achtergrondkleur */
-    display: block;
-    font-family:"Upgrade Light", Fallback;
 }
 
 /* Hero Image */
@@ -820,13 +876,6 @@ p {
     /* Verwijder de vaste hoogte, zodat kolommen zichzelf kunnen aanpassen */
 }
 
-
-
-.heading {
-    font-size: 1.5rem;
-    font-weight: bold; /* Dikgedrukte koppen in de kolommen */
-}
-
 .cta-btn {
     padding: 10px 20px;
     background-color: #007bff;
@@ -843,7 +892,6 @@ p {
     gap: 0px;
     background-color: red; /* Lichtgroene achtergrondkleur */
     height: 400px;
-    border: solid 1px white; 
 }
 
 .image-overlay {
@@ -869,9 +917,36 @@ p {
     text-align: center;
 }
 
+.parallax {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 150%;
+  background-image: url('https://bitcount.typenetwork.com/img/slider/slider_02/2.jpg');
+  background-size: cover;
+  background-position: center;
+  transform: translateY(-10%);
+  z-index: -1;
+}
+
+.block{
+  width: 100vw;
+  margin-top: 100px;
+  margin-bottom: 100px;
+  background-color: white;
+  box-shadow: 0 -20px 20px rgba(0, 0, 0, 0.3), /* Bovenschaduw */
+              0 20px 20px rgba(0, 0, 0, 0.3);  /* Onderschaduw */
+}
+
+.headerBox, .two-columns-70, .three-columns, .number-block {
+    width: 100%; /* De container  neemt 100% van de breedte van de pagina in beslag */
+    max-width: 1500px; /* De inhoud wordt niet breder dan 1200px */   display: flex;
+    margin: 0 auto;      
+}
+
 /* Cijferblok (horizontale lijst) */
 .number-block {
-    display: flex;
     justify-content: space-between;
     background-color: #202121;
     padding: 20px;
@@ -908,15 +983,19 @@ p {
 .number-header {
     font-size: 1.2rem;
     margin-bottom: 0px; /* Ruimte tussen de header en het cijfer */
+    text-align: center;
 }
 
 .number-item .number {
     font-size: 2rem;
     font-weight: bold;
+    text-align: center;
 }
+
 
 .number-item .description {
     font-size: 1rem;
+    text-align: center;
 }
 
 /* Three Columns (30%, 30%, 30%) */
@@ -972,9 +1051,11 @@ p {
 .def{
   color:lightgray;
 }
+
 .heading {
-    font-size: 1.5rem;
-    font-weight: bold;
+    font-family:"Upgrade Bold", Fallback;
+    color:white;
+    font-size: 4em;
 }
 
 /* Two Columns (70%, 30%) */
@@ -1000,11 +1081,6 @@ p {
 
 .two-columns-70 .column {
     width: 50%; /* Eerste kolom krijgt 70% breedte */
-    padding-left: 10px;
-}
-
-.two-columns-70 .column p {
-    padding: 20px; 
 }
 
 /* Animatie Fade-In */
