--- a/templates/family.html
+++ b/templates/family.html
@@ -101,8 +101,6 @@
           <p class="summary">Upgrade marks TYPETR’s first “normal” typeface release in many years. This substantial sans serif family supports a generous set of characters and features, and will thrive in a wide range of publication types and media. The typeface lends itself particularly well to scripted workflows.</p>
       </div>
     </div>    
-
-
     <div class="block">  
       <!-- ARTICLE  1-->
       <div class="one-colum">  
@@ -117,6 +115,43 @@
         </div>     
       </div>
     </div>    
+
+    <!-- SIX COLUMNS IMAGES -->
+    <div class="block">  
+      <!-- CONTENT -->
+      <div class="six-colum-flex">  
+        <div class="six-items">
+          <div class="image-block">
+            <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
+          </div>   
+        </div>
+        <div class="six-items">
+          <div class="image-block">
+            <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
+          </div>   
+        </div>
+        <div class="six-items">
+          <div class="image-block">
+            <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
+          </div>   
+        </div>
+        <div class="six-items">
+          <div class="image-block">
+            <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
+          </div>   
+        </div>
+        <div class="six-items">
+          <div class="image-block">
+            <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
+          </div>   
+        </div>
+        <div class="six-items">
+          <div class="image-block">
+            <img src="./images/2022/Proforma_in_use_04_things_to_forget4.jpg">
+          </div>   
+        </div>
+      </div>
+    </div>
 
     <!-- FIVE COLUMNS IMAGES -->
     <div class="block">  
@@ -440,7 +475,7 @@
             <div class="image-block">
               <div class="rot">
                 <img src="https://upgrade.typenetwork.com/images/NoordzijCube-test-x-1000MMTranspUpgrade.gif">
-              </div>
+                </div>
             </div>
           </div>
         </div>
