--- a/templates/family.html
+++ b/templates/family.html
@@ -120,32 +120,32 @@
     <div class="block">  
       <!-- CONTENT -->
       <div class="six-colum-flex">  
-        <div class="six-items">
+        <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
           </div>   
         </div>
-        <div class="six-items">
+        <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
           </div>   
         </div>
-        <div class="six-items">
+        <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
           </div>   
         </div>
-        <div class="six-items">
+        <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
           </div>   
         </div>
-        <div class="six-items">
+        <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
           </div>   
         </div>
-        <div class="six-items">
+        <div class="six-items-flex">
           <div class="image-block">
             <img src="./images/2022/Proforma_in_use_04_things_to_forget4.jpg">
           </div>   
@@ -157,27 +157,27 @@
     <div class="block">  
       <!-- CONTENT -->
       <div class="five-colum-flex">  
-        <div class="five-items">
+        <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
           </div>   
         </div>
-        <div class="five-items">
+        <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
           </div>   
         </div>
-        <div class="five-items">
+        <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
           </div>   
         </div>
-        <div class="five-items">
+        <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
           </div>   
         </div>
-        <div class="five-items">
+        <div class="five-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_It's the end of the wordl_01.jpg">
           </div>   
@@ -188,22 +188,22 @@
     <!-- FOUR COLUMNS IMAGES -->
     <div class="block">  
       <div class="four-colum-flex">  
-        <div class="four-items">
+        <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
           </div>   
         </div>
-        <div class="four-items">
+        <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
           </div>   
         </div>
-        <div class="four-items">
+        <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
           </div>   
         </div>
-        <div class="four-items">
+        <div class="four-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_09_freekdejonge.jpg">
           </div>   
@@ -214,17 +214,17 @@
     <!-- THREE COLUMNS IMAGES -->
     <div class="block">  
       <div class="three-colum-flex">  
-        <div class="three-items">
+        <div class="three-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
           </div>   
         </div>
-        <div class="three-items">
+        <div class="three-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
           </div>   
         </div>
-        <div class="three-items">
+        <div class="three-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_06_Chocolate heaven_neon.jpg">
           </div>   
@@ -235,12 +235,12 @@
     <!-- TWO COLUMNS IMAGES -->
     <div class="block">  
       <div class="two-colum-flex">  
-        <div class="two-items">
+        <div class="two-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_pure_care_02.jpg">
           </div>   
         </div>
-        <div class="two-items">
+        <div class="two-items-flex">
           <div class="image-block">
             <img src="./images/2022/Presti_in_use_songs of love and hate_01.jpg">
           </div>   
@@ -268,7 +268,7 @@
         <div class="article">  
           <div class="text-block">
             <h4>Scripted examples</h4>
-            <p>TMost examples on this site have been generated by scripts. Not all designers will find that interesting, but TYPETR believes that typeface and publication development have radically changed over the past few years. The increase in size (800+ glyphs, 8000+ kerning pairs, interpolating weights and widths), the construction of the new variable fonts, and the creation of documents by parameters and data—rather than by manual page layout—call for new perspectives on typography and graphic design.</p>
+            <p>Most examples on this site have been generated by scripts. Not all designers will find that interesting, but TYPETR believes that typeface and publication development have radically changed over the past few years. The increase in size (800+ glyphs, 8000+ kerning pairs, interpolating weights and widths), the construction of the new variable fonts, and the creation of documents by parameters and data—rather than by manual page layout—call for new perspectives on typography and graphic design.</p>
           </div>
         </div>     
       </div>
@@ -508,7 +508,7 @@
         </div>
       </div>  
     </div>
-      
+
     <div class="block dark">  
       <div class="four-colum">  
         <div class="four-items">
