--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -836,6 +836,17 @@ figcaption{
 
 /* RESPONSIVE TYPOGRAPHY */
 
+@media screen and (max-width: 1200px) {
+  h1 { font-size: 4.5rem;}
+  h2 { font-size: 3rem;}
+  h3 { font-size: 2.5rem;}
+  h4 { font-size: 2.2rem;}
+  h5 { font-size: 2.5rem;}
+  h6 { font-size: 1rem;}
+  p { font-size: 1.7rem;}
+  p.summary { font-size: 1.7rem; line-height:1.4; }
+}
+
 @media screen and (max-width: 1000px) {
   h1 { font-size: 4.5rem;}
   h2 { font-size: 3rem;}
@@ -844,31 +855,12 @@ figcaption{
   h5 { font-size: 2.5rem;}
   h6 { font-size: 1rem;}
   p { font-size: 1.7rem;}
-}
-
-@media screen and (max-width: 900px) {
-  h1 { font-size: 4.2rem;}
-  h2 { font-size: 2.8rem;}
-  h3 { font-size: 2.5rem;}
-  h4 { font-size: 2.2rem;}
-  h5 { font-size: 2.5rem;}
-  h6 { font-size: 1rem;}
-  p { font-size: 1.7rem;}
+  p.summary { font-size: 1.7rem; line-height:1.4; }
 }
 
 @media screen and (max-width: 750px) {
   h1 {font-size: 4rem;}
   h2 { font-size: 2.5rem;}
-  h3 { font-size: 2.5rem;}
-  h4 { font-size: 2.2rem;}
-  h5 { font-size: 2.5rem;}
-  h6 { font-size: 1rem;}
-  p { font-size: 1.7rem;}
-}
-
-@media screen and (max-width: 600px) {
-  h1 {font-size: 3.9rem;}
-  h2 { font-size: 2.3rem;}
   h3 { font-size: 2.5rem;}
   h4 { font-size: 2.2rem;}
   h5 { font-size: 2.5rem;}
@@ -913,6 +905,7 @@ figcaption{
   max-width: 100%;  
 }
 
+.one-item-flex, .two-items-flex, .three-items-flex, .four-items-flex, .five-items-flex, .six-items-flex,
 .one-item, .two-items, .three-items, .four-items, .five-items, .six-items {
   box-sizing: border-box;
   float:left;
@@ -923,75 +916,93 @@ figcaption{
 }
 
 .one-item {
-    width:100%;
+  width:100%;
+  display: flex;
+  flex-direction: column;
 }
 
-.two-items {
+.two-items, .two-items-flex {
     width:50%;
     display: flex;
     justify-content: flex-start;
 }
 
-.three-items {
+.three-items, .three-items-flex {
     width:33.333%;
 }
 
-.four-items {
+.four-items, .four-items-flex {
     width:25%;
 }
 
-.five-items {
+.five-items, .five-items-flex {
     width:20%;
 }
 
-.six-items {
+.six-items, .six-items-flex {
     width:16.6%;
 }
 
 /* RESPONSIVE COLUMS */
 
 @media screen and (max-width: 1000px) {
-  .five-items{width:25%;}
-  .five-items:nth-child(5):has(.image-block) {display:none;}
-  .six-items{width:20%;}
-  .six-items:nth-child(6):has(.image-block) {display:none;}
+  .five-items-flex{width:25%;}
+  .five-items-flex:nth-child(5):has(.image-block) {display:none;}
+  .six-items-flex{width:20%;}
+  .six-items-flex:nth-child(6):has(.image-block) {display:none;}
 }
 
 @media screen and (max-width: 900px) {
-  .four-items{width:50%;}
-  .five-items{width:33.333%;}
-  .five-items:nth-child(4):has(.image-block) {display:none;}
-  .five-items:nth-child(5):has(.image-block) {display:none;}
-  .six-items{width:25%;}
-  .six-items:nth-child(5):has(.image-block) {display:none;}
-  .six-items:nth-child(6):has(.image-block) {display:none;}
+  .four-items-flex{width:50%;}
+  .five-items-flex{width:33.333%;}
+  .five-items-flex:nth-child(4):has(.image-block) {display:none;}
+  .five-items-flex:nth-child(5):has(.image-block) {display:none;}
+  .six-items-flex{width:25%;}
+  .six-items-flex:nth-child(5):has(.image-block) {display:none;}
+  .six-items-flex:nth-child(6):has(.image-block) {display:none;}
 }
 
 @media screen and (max-width: 750px) {
-  .three-items{width:50%;}
-  .three-items:nth-child(3):has(.image-block) {display:none;}
-  .four-items{width:50%;}
-  .five-items{width:50%;}
-  .five-items:nth-child(4):has(.image-block) {display:block;}
-  .five-items:nth-child(5):has(.image-block) {display:none;}
-  .six-items{width:33.3%;}
-  .six-items:nth-child(4):has(.image-block) {display:none;}
-  .six-items:nth-child(5):has(.image-block) {display:none;}
-  .six-items:nth-child(6):has(.image-block) {display:none;}
+  .three-items-flex{width:50%;}
+  .three-items-flex:nth-child(3):has(.image-block) {display:none;}
+  .four-items-flex{width:50%;}
+  .five-items-flex{width:50%;}
+  .five-items-flex:nth-child(4):has(.image-block) {display:block;}
+  .five-items-flex:nth-child(5):has(.image-block) {display:none;}
+  .six-items-flex{width:33.3%;}
+  .six-items-flex:nth-child(4):has(.image-block) {display:none;}
+  .six-items-flex:nth-child(5):has(.image-block) {display:none;}
+  .six-items-flex:nth-child(6):has(.image-block) {display:none;}
 }
 
 @media screen and (max-width: 600px) {
-  .two-items{width:100%;}
-  .three-items{width:100%;}
-  .three-items:nth-child(3):has(.image-block) {display:block;}
-  .four-items{width:100%;}
-  .five-items{width:100%;}
-  .five-items:nth-child(5):has(.image-block) {display:block;}
-  .six-items{width:50%;}
-  .six-items:nth-child(4):has(.image-block) {display:block;}
-  .six-items:nth-child(5):has(.image-block) {display:block;}
-  .six-items:nth-child(6):has(.image-block) {display:block;}
+  .two-items-flex{width:100%;}
+  .three-items-flex{width:100%;}
+  .three-items-flex:nth-child(3):has(.image-block) {display:block;}
+  .four-items-flex{width:100%;}
+  .five-items-flex{width:100%;}
+  .five-items-flex:nth-child(5):has(.image-block) {display:block;}
+  .six-items-flex{width:50%;}
+  .six-items-flex:nth-child(4):has(.image-block) {display:block;}
+  .six-items-flex:nth-child(5):has(.image-block) {display:block;}
+  .six-items-flex:nth-child(6):has(.image-block) {display:block;}
 }
+
+/* RESPONSIVE COLUMS */
+
+@media screen and (max-width: 1200px) {
+  .four-items{width:50%;}
+}
+
+@media screen and (max-width: 1000px) {
+  .three-items{width:100%;}
+}
+
+@media screen and (max-width: 800px) {
+  .two-items{width:100%;}
+  .four-items{width:100%;}
+}
+
 
 /* BLOCKS */
 
@@ -1005,6 +1016,26 @@ figcaption{
   border-top: solid 0.5px white; 
   border-bottom: solid 0.5px white; 
 }
+
+/*
+
+@media screen and (max-width: 1000px) {
+  .block{ background-color: red;}
+}
+
+@media screen and (max-width: 900px) {
+  .block{ background-color: orange;}
+}
+
+@media screen and (max-width: 750px) {
+  .block{ background-color: green;}
+}
+
+@media screen and (max-width: 600px) {
+  .block{ background-color: yellow;}
+}
+
+*/
 
 .dark{
    background-color: #202121; 
@@ -1037,7 +1068,6 @@ figcaption{
   border-top: solid 1px gray;
   flex-direction: column;
   box-sizing: border-box;
-  margin-bottom: 40px;
 }
 
 @media screen and (min-width: 1300px) {
@@ -1071,6 +1101,19 @@ figcaption{
 .rot{
   padding-top: 30px;
   margin-left: 10%;
+}
+
+.vot {
+  margin-left: 10%;
+  width: 100%;
+  height: 300px;
+  flex-grow: 1;
+}
+
+.vot img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .image-block {
@@ -1178,7 +1221,6 @@ figcaption{
 
 /* HERO OVERLAY */
 .hero-image {
-    background-image: url('https://via.placeholder.com/1920x500');
     background-size: cover;
     background-position: center;
 }
